[package]
name = "tca"
version = "0.1.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = { git = "ssh://git@github.com/Overmuse/alpaca", tag = "v0.5.1" }
anyhow = "1.0.40"
async-trait = "0.1.48"
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.5.0" }
serde = { version = "1.0.125", features = ["derive"] }
stream-processor = { git = "ssh://git@github.com/Overmuse/stream-processor", tag = "v0.2.1" }
uuid = "0.8.2"
