[package]
name = "tca"
version = "1.1.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = { git = "ssh://git@github.com/Overmuse/alpaca", tag = "v0.6.0" }
anyhow = "1.0.40"
async-trait = "0.1.48"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.11.0"
dotenv = "0.15.0"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.2.2" }
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.5.0" }
sentry = "0.22.0"
serde = { version = "1.0.125", features = ["derive"] }
stream-processor = { git = "ssh://git@github.com/Overmuse/stream-processor", tag = "v0.2.1" }
tca = { path = "." }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
uuid = "0.8.2"

[dev-dependencies]
serde_json = "1.0.64"
